--- a/mod2-solution/main.css
+++ b/mod2-solution/main.css
@@ -3,6 +3,7 @@
 * {
 box-sizing: border-box;
 
+
 }
 
 body {
@@ -25,12 +26,44 @@ p {
 
 background-color: #FCFBC6;
 width: 90%;
+height: 150px;
 margin-right: auto;
 margin-left: auto;
 padding: 10px;
 font-family: arial;
 border: groove 5px gold;
 }
+
+
+/*Section Heading*/
+
+h2 {
+
+background: white;
+font-size: 20px;
+width: 65px;
+text-align: center;
+position: absolute;
+top: 10px;
+right: 30px;
+
+
+}
+
+#seoul {
+background-color: pink;
+
+}
+
+#taipai {
+background-color: green;
+
+}
+
+#tokyo {
+	background-color: red;
+}
+
 
 
 
@@ -43,6 +76,7 @@ width: 100%;
 
 
 
+
 }
 
 /*Desktop*/
@@ -51,6 +85,7 @@ width: 100%;
 .col-lg-4 {
 width: 33.3%;
 float: left;
+position: relative;
 
 }
 }
@@ -63,6 +98,7 @@ float: left;
 
 width: 50%;
 float: left;
+position: relative;
 
 
 }
@@ -71,6 +107,7 @@ float: left;
 
 width: 100%;
 float: left;
+position: relative;
 
 
 
@@ -86,6 +123,7 @@ float: left;
 
 width: 100%;
 float: left;
+position: relative;
 
 
 }
